@@ -5581,10 +5581,10 @@ or
 character.
 .TP 10
 .BI ^I  " tab"
-Attempts command or file name completion as described above
-and returns to input mode.
-If a partial completion occurs, repeating this will
-behave as if
+Except at the start of the line, attempts command or
+file name completion as described above and returns to
+input mode. If a partial completion occurs, repeating
+this will behave as if
 .B =
 were entered from control mode.
 If no match is found or entered after
